--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-My personal dotfiles + an installer script and a few other fun things.  Most of my setup is pretty standard, I use zsh with a funky prompt and a baotload of settings from oh-my-zsh.  I have some python convenience functions in various_/pythonrc, but the majority of the customization is in vim_.  If you're checking this out, it's probably to look at my vimrc(vim_/vimrc).
+My personal dotfiles + an installer script and a few other fun things.  Most of my setup is pretty standard, I use zsh with a funky prompt and a boatload of settings from oh-my-zsh.  I have some python convenience functions in various_/pythonrc, but the majority of the customization is in vim_.  If you're checking this out, it's probably to look at my vimrc(vim_/vimrc).
